# tree-sitter-riscv

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  t2.asm  tree-sitter.json
.github/: mirror.py
.github/workflows/: ci.yml  fuzz.yml  mirror.yml  publish.yml
bindings/c/: tree-sitter-mips.h  tree-sitter-mips.pc.in  tree-sitter-riscv.h  tree-sitter-riscv.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mips/: __init__.py
bindings/python/tree_sitter_riscv/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMipsTests/: TreeSitterMipsTests.swift
bindings/swift/TreeSitterRiscVTests/: TreeSitterRiscVTests.swift
docs/: AST.md  DEVELOPMENT.md  EDITOR_INTEGRATION.md  LANGUAGE_INTEGRATION.md
examples/: comments.S  directives.S  expressions.S  instructions.S  labels.S  macros.S  mips.S  preview.S  preview.asm  riscv.S
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: address.test  comment.test  directive.test  empty.test  error.test  fields.test  instructions.test  macro.test  mixed.test  modulo.test  whitespace.test
test/corpus/directives/: arguments.test  assignment.test  comment.test  complex_separators.test  control.test  error.test  expressions.test  fields.test  float.test  integer.test  macro.test  numeric.test  string.test  whitespace.test
test/corpus/instructions/: address.test  comment.test  complex_separators.test  error.test  expressions.test  fields.test  float.test  integer.test  integers.test  macro.test  modulo.test  opcode.test  operands.test  register.test  unary.test  whitespace.test
test/corpus/labels/: directive.test  error.test  global.test  instruction.test  local.test  numeric.test  whitespace.test
test/corpus/program/: comment.test  error.test  preprocessor.test  whitespace.test
