[package]
name = "tree-sitter-mips"
description = "A syntax parser for the MIPS Instruction Set Architecture."
version = "0.1.1"
authors = ["Oskar Meyenburg <oskar.meyenburg@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "mips"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/omeyenburg/tree-sitter-mips"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"
tree-sitter = "0.25.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.25.1"
