[package]
name = "tree-sitter-riscv"
description = "A syntax parser for the RISC-V Instruction Set Architecture."
version = "0.2.0"
authors = ["Oskar Meyenburg <oskar.meyenburg@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "riscv"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/omeyenburg/tree-sitter-riscv"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = ">=0.23.0"
